--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,4 @@
 {
-  "presets": ["es2015",  "stage-1"],
-  "plugins": [
-    "transform-decorators-legacy",
-    "transform-class-properties",
-    "syntax-async-functions",
-    "transform-regenerator"
-  ]
+  "presets": ["env"],
+  "plugins": []
 }
