--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "NODE_ENV=production node --harmony .",
     "dev": "NODE_ENV=development ./node_modules/.bin/nodemon -x \"node --harmony\" .",
-    "purge": "rm -rf node_modules; rm -rf bin; npm cache clean; npm i",
+    "purge": "rm -rf node_modules; npm i",
     "pretest": "npm run test:lint",
     "test": "echo \"Error: no test specified\" && exit 1",
     "test:unit": "./node_modules/.bin/jest --verbose",
@@ -16,8 +16,8 @@
   "author": "Clear Capital",
   "license": "UNLICENSED",
   "engines": {
-    "node": "6.3.1",
-    "npm": "3.10.7"
+    "node": "8.9.4",
+    "npm": "5.7.1"
   },
   "jest": {
     "transform": {
@@ -26,31 +26,21 @@
     "collectCoverage": true
   },
   "dependencies": {
-    "babel-core": "6.25.0",
-    "babel-eslint": "7.2.3",
-    "babel-jest": "15.0.0",
-    "babel-loader": "6.2.10",
-    "babel-plugin-syntax-async-functions": "6.13.0",
-    "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-plugin-transform-decorators-legacy": "1.3.4",
-    "babel-plugin-transform-regenerator": "6.24.1",
-    "babel-polyfill": "6.23.0",
-    "babel-preset-stage-1": "6.24.1",
-    "babel-register": "6.24.1",
-    "babel-register": "6.14.0",
-    "body-parser": "1.15.2",
+    "babel-cli": "6.26.0",
+    "babel-preset-env": "1.6.1",
+    "body-parser": "1.18.2",
     "cookie-parser": "1.4.3",
-    "ejs": "2.5.2",
-    "express": "4.14.0",
-    "morgan": "1.7.0",
-    "node-fetch": "1.6.3"
+    "ejs": "2.5.7",
+    "express": "4.16.2",
+    "morgan": "1.9.0",
+    "node-fetch": "2.1.1"
   },
   "devDependencies": {
-    "babel-jest": "16.0.0",
-    "eslint": "3.5.0",
-    "eslint-config-standard": "6.0.0",
-    "jest": "18.1.0",
-    "jest-cli": "18.1.0",
-    "standard": "8.6.0"
+    "babel-jest": "22.4.1",
+    "babel-eslint": "8.2.2",
+    "eslint": "4.18.2",
+    "eslint-config-standard": "11.0.0",
+    "jest": "22.4.2",
+    "standard": "11.0.0"
   }
 }
